--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ログイン認証付きマップ</title>
+  <title>Box検索マップ</title>
   <style>
     #map { height: 80vh; width: 100%; }
     #loginSection, #mapSection { display: none; }
@@ -17,6 +17,7 @@
   </div>
 
   <div id="mapSection">
+    <h2>千葉県BOX一覧表示MAP</h2> <!-- ←タイトル！ -->
     <button onclick="logout()">ログアウト</button>
     <div id="map"></div>
   </div>
