--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Box検索マップテスト状態</title>
+  <title>Box検索マップ</title>
   <style>
     #map { height: 80vh; width: 100%; }
     #loginSection, #mapSection { display: none; }
@@ -82,17 +82,18 @@
         const snapshot = await getDocs(collection(db, "mapBox"));
         snapshot.forEach((doc) => {
           const place = doc.data();
-          const loc = {
-            lat: Number(place.lat),
-            lng: Number(place.lng)
-          };
+
+          // latlng をカンマで分割して数値化
+          const [lat, lng] = place.latlng.split(',').map(Number)
+          const loc = { lat, lng };
+          
           new google.maps.Marker({ 
             position: loc,
              map,
               title: place.name,
               icon: {
                 url: place.icon,
-                scaledSize: new google.maps.Size(64, 64)
+                scaledSize: new google.maps.Size(48, 48)
               }
             });
             console.log("アイコンURL:", place.icon);
@@ -102,5 +103,6 @@
       document.head.appendChild(script);
     }
   </script>
+
 </body>
 </html>
