--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Box全体MAP</title>
+  <title>基地局全体MAP</title>
   <style>
     #map { height: 80vh; width: 100%; }
     #loginSection, #mapSection { display: none; }
@@ -65,11 +65,11 @@
 </div>
 
 <div id="mapSection">
-  <h2>千葉県Box一覧MAP</h2>
+  <h2>千葉県N基地局一覧MAP</h2>
   <button onclick="logout()">ログアウト</button>
 
   <div style="margin: 10px 0; position: relative;">
-    <input type="text" id="searchInput" placeholder="Boxを検索"
+    <input type="text" id="searchInput" placeholder="基地局名で検索"
            style="padding:6px; width:250px; font-size:1rem;">
     <button id="searchButton" style="padding:6px 12px; font-size:1rem;">検索</button>
     <div id="searchResults"
@@ -86,15 +86,7 @@ import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from
 import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore.js";
 import { getAnalytics, logEvent } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-analytics.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyCTN_ErXKRtlQn97ukXYghZWpgq6Nmj-uQ",
-  authDomain: "tellwebproject.firebaseapp.com",
-  projectId: "tellwebproject",
-  storageBucket: "tellwebproject.firebasestorage.app",
-  messagingSenderId: "845001095725",
-  appId: "1:845001095725:web:5de6c8b20e102348be96a4",
-  measurementId: "G-20XPSVYFB6"
-};
+const firebaseConfig = { /* Your Firebase Config */ };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth();
@@ -113,6 +105,10 @@ window.login = async function() {
 
 window.logout = () => signOut(auth);
 
+let map;
+const markers = [];
+let sharedInfoWindow;
+
 onAuthStateChanged(auth, (user) => {
   if (user) {
     document.getElementById("loginSection").style.display = "none";
@@ -125,28 +121,22 @@ onAuthStateChanged(auth, (user) => {
   }
 });
 
-// 最初にグローバルにマーカーを保存する配列を用意
-const markers = [];
-
 window.initMap = async () => {
-  const map = new google.maps.Map(document.getElementById("map"), {
+  map = new google.maps.Map(document.getElementById("map"), {
     center: { lat: 35.43, lng: 139.92 },
-    zoom: 10,
-    restriction: { latLngBounds: { north: 45.6, south: 24.0, west: 122.9, east: 153.9 }, strictBounds: false }
+    zoom: 10
   });
 
-  const sharedInfoWindow = new google.maps.InfoWindow();
+  sharedInfoWindow = new google.maps.InfoWindow();
 
-  const snapshot = await getDocs(collection(db, "mapAllHub"));
+  const snapshot = await getDocs(collection(db, "mapAllBox"));
   snapshot.forEach((doc) => {
     const data = doc.data();
     for (const key in data) {
       const place = data[key];
       if (!place.latlng || !place.name) continue;
 
-      const [latStr, lngStr] = place.latlng.split(',').map(s => s.trim());
-      const lat = parseFloat(latStr);
-      const lng = parseFloat(lngStr);
+      const [lat, lng] = place.latlng.split(',').map(Number);
       if (isNaN(lat) || isNaN(lng)) continue;
 
       const marker = new markerWithLabel.MarkerWithLabel({
@@ -157,20 +147,9 @@ window.initMap = async () => {
         labelClass: "marker-label"
       });
 
-      // 🔥 マーカー配列に保存（これが不足してました！）
-      const infoContent = `
-        <div style="margin:0; padding:0; line-height:1.1; font-size:13px;">
-          <div style="font-weight:bold; margin-bottom:2px;">${place.name}</div>
-          <div>${place.area || ''}</div>
-          <div>${place.number || ''}</div>
-        </div>
-      `;
+      const infoContent = `<div><strong>${place.name}</strong><br>${place.area || ''}<br>${place.number || ''}</div>`;
 
-      markers.push({
-        marker,
-        name: place.name,
-        infoContent,
-      });
+      markers.push({ marker, name: place.name, infoContent });
 
       marker.addListener("click", () => {
         sharedInfoWindow.setContent(infoContent);
@@ -179,7 +158,6 @@ window.initMap = async () => {
     }
   });
 };
-
 
 function loadGoogleMaps() {
   const script = document.createElement("script");
